--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <div class="mensagem">
             <p>Você não precisa mais selecionar uma região antes de fazer login. Quando fizer login,
                 a região associada à sua conta será atualizada automaticamente.</p>
-            <p>Se estiver com problemas para fazer login, talvez precise <span>atualizar sua conta</span>. <img id="seta-vermelha" src="assets/img/seta2.png"><a href="#"></a></p>
+            <p>Se estiver com problemas para fazer login, talvez precise <span>atualizar sua conta</span>. 
+                <img id="seta-vermelha" src="assets/img/seta2.png">
+                <a href="https://update-account.riotgames.com/?locale=pt_BR"></a>
+            </p>
             <div id="triangulo-para-esquerda"></div>
         </div>
         <div id="help" class="help">
@@ -55,7 +58,7 @@
                     <img class="seta" src="assets/img/seta.png" alt="prosseguir">
                 </div>
                 <div class="opcoes">
-                    <a href="#">NÃO CONSEGUE INICIAR SESSÃO</a>
+                    <a href="https://recovery.riotgames.com/pt-br?region=BR1">NÃO CONSEGUE INICIAR SESSÃO</a>
                     <a href="https://signup.br.leagueoflegends.com/pt/signup/index#/">CRIAR CONTA</a>
                 </div>
             </div>
