tratamento de erro

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <h1>Fazer login</h1>
                 <div class="campos-form" >
                     <input type="text" id="usuario" onblur="onUsuarioBlur()" placeholder="NOME DE USUÁRIO" autofocus>
+                    <div id="status">Deve ter pelo menos 2 caracteres</div>
                     <div class="campoSenha">
                         <input class="senha_foco" id="senha" onfocus="onPasswordFocus()" onblur="onPasswordBlur()" type="password"  placeholder="SENHA">
                         <span id="mostrar" onclick="funcaoMostrar()">
