Update Index + app.js

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
     <div id="container">
         <div id="help" class="help">
-            <span>?</span>
-            <div class="mensagem">
+            ?
+            <div id="mensagem" class="mensagem">
                 <p>Você não precisa mais selecionar uma região antes de fazer login. Quando fizer login,
                     a região associada à sua conta será atualizada automaticamente.</p>
                 <p>Se estiver com problemas para fazer login, talvez precise <span>atualizar sua conta</span>. 
