--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
                     <span class="check"></span>
                     <label class="checkbox" for="check">Manter login</label>
                 </div>
-                <div class="prosseguir" id="fazerLogin" onwaiting="validacaoForm()">
-                    <img class="seta" src="assets/img/seta.png" alt="prosseguir">
+                <div  class="prosseguir" id="fazerLogin" onwaiting="validacaoForm()">
+                    <a href="https://juliamaglhaes.github.io/champions_select/">
+                        <img class="seta" src="assets/img/seta.png" alt="prosseguir">
+                    </a>
                 </div>
                 <div class="opcoes">
                     <a href="https://recovery.riotgames.com/pt-br?region=BR1">NÃO CONSEGUE INICIAR SESSÃO</a>
